@@ -2,10 +2,13 @@ package net.sourceforge.pmd.lang.java.rule.strings;
 
 import net.sourceforge.pmd.lang.ast.Node;
 import net.sourceforge.pmd.lang.java.ast.ASTAdditiveExpression;
+import net.sourceforge.pmd.lang.java.ast.ASTArgumentList;
 import net.sourceforge.pmd.lang.java.ast.ASTLiteral;
 import net.sourceforge.pmd.lang.java.ast.ASTName;
 import net.sourceforge.pmd.lang.java.ast.ASTPrimaryExpression;
 import net.sourceforge.pmd.lang.java.ast.ASTPrimaryPrefix;
+import net.sourceforge.pmd.lang.java.ast.ASTReferenceType;
+import net.sourceforge.pmd.lang.java.ast.ASTType;
 import net.sourceforge.pmd.lang.java.rule.AbstractJavaRule;
 import net.sourceforge.pmd.lang.java.symboltable.VariableNameDeclaration;
 
@@ -25,6 +28,20 @@ public class UselessStringValueOfRule extends AbstractJavaRule {
             if (parent.jjtGetNumChildren() != 2) {
                 return super.visit(node, data);
             }
+            // skip String.valueOf(anyarraytype[])
+            ASTArgumentList args = parent.getFirstDescendantOfType(ASTArgumentList.class);
+            if (args != null) {
+                ASTName arg = args.getFirstDescendantOfType(ASTName.class);
+                if (arg != null) {
+                    ASTType argType = arg.getNameDeclaration().getNode().jjtGetParent().jjtGetParent().getFirstDescendantOfType(ASTType.class);
+                    if (argType != null
+                            && argType.jjtGetChild(0) instanceof ASTReferenceType
+                            && ((ASTReferenceType)argType.jjtGetChild(0)).isArray()) {
+                        return super.visit(node, data);
+                    }
+                }
+            }
+
             Node gp = parent.jjtGetParent();
             if (parent instanceof ASTPrimaryExpression &&
                     gp instanceof ASTAdditiveExpression &&
